--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
+    "express": "4.x",
     "ejs": "*",
+    "body-parser": "~1.3.0",
+    "cookie-parser": "~1.1.0",
+    "express-session": "~1.2.1",
+    "morgan": "~1.1.1",
+    "serve-static": "~1.2.1",
+    "errorhandler": "~1.0.2",
+    "mongoose": "~3.9.0",
     "ppt2png": "*",
     "formidable": "*",
-    "socket.io": "*",
-    "mongoose": "3.9.0"
+    "socket.io": "*"
   }
 }
