--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "application-name",
+  "name": "WeActivity",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "4.x",
@@ -14,10 +14,14 @@
     "morgan": "~1.1.1",
     "serve-static": "~1.2.1",
     "errorhandler": "~1.0.2",
+    "view-helpers": "~0.1.4",
+    "connect-mongo": "~0.4.1",
+    "connect-flash": "~0.1.1",
     "mongoose": "~3.9.0",
     "ppt2png": "*",
     "formidable": "*",
     "socket.io": "*",
+    "winston": "~0.7.3",
     "mocha": "*",
     "chai": "*",
     "superagent": "*"
