--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "4.x",
     "jade": "*",
+    "node-compass": "*",
     "body-parser": "~1.3.0",
     "cookie-parser": "~1.1.0",
     "express-session": "~1.2.1",
