add slide module

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "*",
     "chai": "*",
     "superagent": "*",
-    "mongoose-auto-increment": "*"
+    "mongoose-auto-increment": "*",
+    "basen": "*"
   }
 }
